...
                    (stringResource(R.string.home_screen_title)),
        leftSide = {
            IconButton(
                onClick = onMenuClick,
                modifier = Modifier
                    .talkbackHint(stringResource(R.string.ui_menu_hint))
                    .testTag("topBarMenu")
            ) {
                Icon(
                    imageVector = Icons.Rounded.Menu,
                    contentDescription = stringResource(R.string.ui_menu),
                    modifier = Modifier.semantics { heading() },
                )
...
                            sleeping = true
                        )
                        onNavigate(HomeRoutes.Sleep.route)
                    },
                    modifier = Modifier
                        .talkbackHint(stringResource(R.string.sleep_sleep_acc_hint))
                        .testTag("topBarSleep")
                ) {
                    Icon(
                        Icons.Rounded.Snooze,
                        contentDescription = stringResource(R.string.sleep_sleep),
                        tint = MaterialTheme.colorScheme.onSurface,
                    )
...
