...
    FlexibleAppBar(
        title = title,
        leftSide = {
            IconWithTextButton(
                text = navigationButtonTitle,
                color = MaterialTheme.colorScheme.onSurface,
                modifier = Modifier.testTag("appBarLeft")
            ) {
                onNavigateUp()
            }
        },
        rightSide = {
            if (rightButtonTitle.isNotEmpty()) {
...
                        .then(
                            if (rightButtonDescription != null) Modifier.semantics {
                                contentDescription = rightButtonDescription
                            } else Modifier
                        )
                        .then(if (rightButtonHint != null) Modifier.talkbackHint(rightButtonHint) else Modifier)
                        .testTag("appBarRight"),
                    text = rightButtonTitle,
                    color = MaterialTheme.colorScheme.onSurface,
                    fontWeight = FontWeight.Bold,
                    fontSize = 22.sp
                )
            }
...
