...
        Row {
            Button(
                onClick = { exitSleep() },
                modifier = modifier
                    .fillMaxWidth()
                    .height(spacing.targetSize * 4)
                    .testTag("sleepWakeUpNow"),
                shape = RoundedCornerShape(spacing.tiny),
                colors = if (!LocalInspectionMode.current) currentAppButtonColors else ButtonDefaults.buttonColors(),
            ) {
                Text(
                    text = stringResource(R.string.sleep_wake_up_now),
                    textAlign = TextAlign.Start,
...
