...
                },
                text = stringResource(R.string.search_nearby_screen_title),
                horizontalPadding = spacing.small,
                modifier = Modifier
                    .semantics { heading() }
                    .talkbackHint(stringResource(R.string.search_button_nearby_accessibility_hint))
                    .testTag("homePlacesNearby")
            )
            // Markers and routes
            NavigationButton(
                onClick = {
                    onNavigate(HomeRoutes.MarkersAndRoutes.route)
                },
                text = stringResource(R.string.search_view_markers),
                horizontalPadding = spacing.small,
                modifier = Modifier
                    .talkbackHint(stringResource(R.string.search_button_markers_accessibility_hint))
                    .testTag("homeMarkersAndRoutes")
            )
            // Current location
            if (fetchingLocation) {
                var announceLoading by remember { mutableStateOf(false) }
                LaunchedEffect(Unit) {
                    kotlinx.coroutines.delay(1500)
...
                        }
                    },
                    text = stringResource(R.string.search_use_current_location),
                    horizontalPadding = spacing.small,
                    modifier = Modifier
                        .talkbackHint(stringResource(R.string.search_button_current_location_accessibility_hint))
                        .testTag("homeCurrentLocation")
                )
            }
            if (location != null) {
                if (routePlayerState.routeData != null) {
                    Card(modifier = Modifier
                        .smallPadding(),
...
                                )

                                CardButton(
                                    onClick = { routeFunctions.stop() },
                                    imageVector = Icons.Filled.Stop,
                                    contentDescriptionId = R.string.route_detail_action_stop_route,
                                    testTag = "routeStop"
                                )

                                if(showMap) {
                                    CardButton(
                                        onClick = { fullscreenMap.value = !fullscreenMap.value },
                                        imageVector = Icons.Rounded.Fullscreen,
...
