...
            text = stringResource(R.string.location_detail_action_beacon),
            talkbackHint = stringResource(R.string.location_detail_action_beacon_hint),
            color = MaterialTheme.colorScheme.onSurface,
            modifier = Modifier
                .defaultMinSize(minHeight = spacing.targetSize)
                .fillMaxWidth()
                .testTag("locationDetailsStartBeacon")
        ) {
            createBeacon(locationDescription.location)
        }

        IconWithTextButton(
            icon = Icons.Filled.Navigation,
...
                text = stringResource(R.string.universal_links_alert_action_marker),
                talkbackHint = stringResource(R.string.location_detail_action_save_hint),
                color = MaterialTheme.colorScheme.onSurface,
                modifier = Modifier
                    .defaultMinSize(minHeight = spacing.targetSize)
                    .fillMaxWidth()
                    .testTag("locationDetailsSaveAsMarker")
            ) {
                showDialog()
                dialogState.value = true
            }
        }

...
