...
                ) {
                    CustomTextField(
                        fieldName = stringResource(R.string.markers_sort_button_sort_by_name),
                        fieldHint = stringResource(R.string.marker_name_description_hint),
                        modifier = Modifier
                            .fillMaxWidth()
                            .testTag("markerName"),
                        value = name,
                        onValueChange = {
                            name = it
                        },
                        testTagPreFix = "name"
                    )
...
