appId: org.scottishtecharmy.soundscape
---
- launchApp:
    clearState: false
- runFlow:
    file: WaitForScreen.yaml
    env:
            screen: Home
- tapOn:
    id: homeMyLocation
- runFlow:
    file: Wait.yaml
    env:
      timeout: 10000
- tapOn:
    id: homeAroundMe
- runFlow:
    file: Wait.yaml
    env:
      timeout: 30000
- tapOn:
    id: homeAheadOfMe
- runFlow:
    file: Wait.yaml
    env:
      timeout: 30000
- tapOn:
    id: homeNearbyMarkers
- runFlow:
    file: Wait.yaml
    env:
      timeout: 10000
- tapOn:
    id: topBarSleep
- tapOn:
    id: sleepWakeUpNow
- tapOn:
    id: topBarMenu
- tapOn:
    id: menuAboutSoundscape
- tapOn:
    id: appBarLeft
- tapOn:
    id: topBarMenu
