appId: org.scottishtecharmy.soundscape
---
- launchApp:
    clearState: false

- tapOn:
    id: homeCurrentLocation
- tapOn:
    id: locationDetailsStartBeacon
- tapOn:
    id: routeStopOrDetails
- tapOn:
    id: homeCurrentLocation
- tapOn:
    id: locationDetailsSaveAsMarker
- tapOn:
    id: markerName
- tapOn:
    id: clearTextField
- tapOn: 1
- tapOn:
    id: flexibleAppBarRight
- tapOn:
    id: appBarLeft
- tapOn:
    id: homePlacesNearby
- tapOn:
    id: placesNearby-0
- tapOn:
    id: placesNearby-0
- tapOn:
    id: locationDetailsSaveAsMarker
- tapOn:
    id: clearTextField
- tapOn:
    id: markerName
- tapOn: 2
- tapOn:
    id: flexibleAppBarRight
- tapOn:
    id: appBarLeft
- tapOn:
    id: appBarLeft
- tapOn:
    id: appBarLeft
- tapOn:
    id: homeMarkersAndRoutes




