appId: org.scottishtecharmy.soundscape
---
- launchApp:
        clearState: false

# This test assumes that there are no markers initially present in the database

- runFlow:
        file: WaitForScreen.yaml
        env:
              screen: Home
- runFlow:
        file: SwipeAndTap.yaml
        env:
              id: homeCurrentLocation
- tapOn:
        id: locationDetailsStartBeacon


- runFlow:
        file: WaitForScreen.yaml
        env:
              screen: Home

- runFlow:
        file: SwipeAndTap.yaml
        env:
              id: routeStop
- runFlow:
        file: SwipeAndTap.yaml
        env:
              id: homeCurrentLocation
- tapOn:
        id: locationDetailsSaveAsMarker
- tapOn:
        id: name-clearTextField
- tapOn:
        id: markerName
- inputText: "A"
- tapOn:
        id: flexibleAppBarRight

- runFlow:
        file: SwipeAndTap.yaml
        env:
              id: 'homePlacesNearby'
              direction: down
- tapOn:
        id: placesNearby-0
- tapOn:
        id: placesNearby-0
- tapOn:
        id: locationDetailsSaveAsMarker
- tapOn:
        id: name-clearTextField
- tapOn:
        id: markerName
- inputText: "B"
- tapOn:
        id: flexibleAppBarRight

- runFlow:
        file: SwipeAndTap.yaml
        env:
              id: homeMarkers
# We should have two markers, A which is closest and B which is farther away
- assertVisible:
        id: 'LocationItem-A-0'
- assertVisible:
        id: 'LocationItem-B-1'
